{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 36,
  "lineage": "e5143bcf-45bb-043b-0cc0-d52304a63116",
  "resources": [
    {
      "module": "module.service_projects",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-rules",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27000",
                  "27001",
                  "1049"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-08T17:19:39.258-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "pennbrain-license-firewall",
            "name": "pennbrain-license-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "priority": 1000,
            "project": "pennbrain-host-3097383fff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/firewalls/pennbrain-license-firewall",
            "source_ranges": [
              "10.20.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pennbrain-license"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          },
          "depends_on": [
            "google_compute_shared_vpc_service_project.service"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-10T15:40:30.043-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "detre-group-firewall",
            "name": "detre-group-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "priority": 1000,
            "project": "pennbrain-host-3097383fff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/firewalls/detre-group-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "detre-group"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "module": "module.service_projects",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal-firewall-rules",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-22T11:32:27.717-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "pennbrain-license-all-internal-firewall",
            "name": "pennbrain-license-all-internal-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "priority": 1000,
            "project": "pennbrain-host-3097383fff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/firewalls/pennbrain-license-all-internal-firewall",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "pennbrain-license"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_shared_vpc_service_project.service"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-11T08:49:11.060-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "detre-group-all-internal-firewall",
            "name": "detre-group-all-internal-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "priority": 1000,
            "project": "pennbrain-host-3097383fff",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/firewalls/detre-group-all-internal-firewall",
            "source_ranges": [
              "10.20.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "detre-group"
            ],
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            }
          }
        }
      ]
    },
    {
      "module": "module.host_project",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "bsc-host-network",
            "name": "bsc-host-network",
            "project": "pennbrain-host-3097383fff",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "module": "module.service_projects",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-22T11:31:30.513-07:00",
            "id": "us-east1/pennbrain-license-router",
            "name": "pennbrain-license-router",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "project": "pennbrain-host-3097383fff",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/regions/us-east1/routers/pennbrain-license-router"
          },
          "depends_on": [
            "google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-11T09:58:02.305-07:00",
            "id": "us-east1/detre-group-router",
            "name": "detre-group-router",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "project": "pennbrain-host-3097383fff",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/regions/us-east1/routers/detre-group-router",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "module": "module.service_projects",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "pennbrain-host-3097383fff/us-east1/pennbrain-license-router/pennbrain-license-router-nat",
            "min_ports_per_vm": 0,
            "name": "pennbrain-license-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "pennbrain-host-3097383fff",
            "region": "us-east1",
            "router": "pennbrain-license-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/regions/us-east1/subnetworks/pennbrain-license-subnet",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "depends_on": [
            "google_compute_router.router",
            "google_compute_subnetwork.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "pennbrain-host-3097383fff/us-east1/detre-group-router/detre-group-router-nat",
            "min_ports_per_vm": 0,
            "name": "detre-group-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "pennbrain-host-3097383fff",
            "region": "us-east1",
            "router": "detre-group-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/regions/us-east1/subnetworks/detre-group-subnet",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "depends_on": [
            "google_compute_router.router",
            "google_compute_subnetwork.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.service_projects",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnets",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-08T17:19:39.676-07:00",
            "enable_flow_logs": false,
            "fingerprint": "e4Rn8fvlpJM=",
            "gateway_address": "10.10.0.1",
            "id": "us-east1/pennbrain-license-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "pennbrain-license-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "private_ip_google_access": false,
            "project": "pennbrain-host-3097383fff",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/regions/us-east1/subnetworks/pennbrain-license-subnet",
            "timeouts": {
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-10T15:40:30.373-07:00",
            "enable_flow_logs": false,
            "fingerprint": "NIwQZVJBJ5Q=",
            "gateway_address": "10.20.0.1",
            "id": "us-east1/detre-group-subnet",
            "ip_cidr_range": "10.20.0.0/16",
            "name": "detre-group-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/global/networks/bsc-host-network",
            "private_ip_google_access": false,
            "project": "pennbrain-host-3097383fff",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pennbrain-host-3097383fff/regions/us-east1/subnetworks/detre-group-subnet",
            "timeouts": {
            }
          }
        }
      ]
    }
  ]
}